{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 58,
  "lineage": "4587fb23-929c-ee5c-63c0-43afd6699aab",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "Joy_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:768202858460:internet-gateway/igw-0ccf390f0791b9eac",
            "id": "igw-0ccf390f0791b9eac",
            "owner_id": "768202858460",
            "tags": {
              "Name": "Joy_internet_gateway"
            },
            "tags_all": {
              "Name": "Joy_internet_gateway"
            },
            "vpc_id": "vpc-0c37ac6854d949a07"
          },
          "dependencies": [
            "aws_vpc.Joy-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "Joy-network_acl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:768202858460:network-acl/acl-061eff6ba8ab8f994",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-061eff6ba8ab8f994",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "768202858460",
            "subnet_ids": [
              "subnet-0b526b55f917463af",
              "subnet-0cca0930efab7e63e"
            ],
            "tags": null,
            "tags_all": {},
            "vpc_id": "vpc-0c37ac6854d949a07"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.Joy-public-subnet1",
            "aws_subnet.Joy-public-subnet2",
            "aws_vpc.Joy-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Joy-route-table-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:768202858460:route-table/rtb-05c3bd5f908d6c82a",
            "id": "rtb-05c3bd5f908d6c82a",
            "owner_id": "768202858460",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ccf390f0791b9eac",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Altschool-route-table-public"
            },
            "tags_all": {
              "Name": "Altschool-route-table-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c37ac6854d949a07"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.Joy_internet_gateway",
            "aws_vpc.Joy-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Altschool-public-subnet2-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-089705eaf7edc0d4f",
            "route_table_id": "rtb-05c3bd5f908d6c82a",
            "subnet_id": "subnet-0cca0930efab7e63e"
          },
          "dependencies": [
            "aws_internet_gateway.Joy_internet_gateway",
            "aws_route_table.Joy-route-table-public",
            "aws_subnet.Joy-public-subnet2",
            "aws_vpc.Joy-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Joy-public-subnet1-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ce53a9a0b07daef2",
            "route_table_id": "rtb-05c3bd5f908d6c82a",
            "subnet_id": "subnet-0b526b55f917463af"
          },
          "dependencies": [
            "aws_internet_gateway.Joy_internet_gateway",
            "aws_route_table.Joy-route-table-public",
            "aws_subnet.Joy-public-subnet1",
            "aws_vpc.Joy-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Joy-public-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:768202858460:subnet/subnet-0b526b55f917463af",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b526b55f917463af",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "768202858460",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Joy-public-subnet1"
            },
            "tags_all": {
              "Name": "Joy-public-subnet1"
            },
            "vpc_id": "vpc-0c37ac6854d949a07"
          },
          "dependencies": [
            "aws_vpc.Joy-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Joy-public-subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:768202858460:subnet/subnet-0cca0930efab7e63e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cca0930efab7e63e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "768202858460",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Altschool-public-subnet2"
            },
            "tags_all": {
              "Name": "Altschool-public-subnet2"
            },
            "vpc_id": "vpc-0c37ac6854d949a07"
          },
          "dependencies": [
            "aws_vpc.Joy-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Joy-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:768202858460:vpc/vpc-0c37ac6854d949a07",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c40706550d6b9914",
            "default_route_table_id": "rtb-075730097bd769f7e",
            "default_security_group_id": "sg-0fc8f51d014e94061",
            "dhcp_options_id": "dopt-0ddbbc50ee393d960",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c37ac6854d949a07",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-075730097bd769f7e",
            "owner_id": "768202858460",
            "tags": {
              "Name": "Joy-vpc"
            },
            "tags_all": {
              "Name": "Joy-vpc"
            }
          }
        }
      ]
    }
  ]
}